# my-playground

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  ai-agent.yaml  authentik.yaml  calcom.yaml  dozzle.yaml  init.yaml  kotaemon.yaml  n8n.yaml  network.yaml  nocodb.yaml  openclaw.Dockerfile  openclaw.yaml  openproject.yaml  postiz-korean.yaml  postiz.yaml  pyproject.toml  searxng.yaml  subtitle-generator.yaml  title_evaluator.py
config/: litestream.yml
src/korean-sns-post/: pyproject.toml
src/korean-teacher-agent/: Dockerfile  Makefile  README.md  alembic.ini  augmented_llm.py  parallelization.py  prompt_chaining.py  pyproject.toml
src/korean-teacher-agent/migrations/: env.py
src/korean-teacher-agent/migrations/versions/: 6ba4f358c0e8_change_status_null_true.py  8e32f0b4b90c_initial_migration.py  e26cf6e98228_add_user_feedback_table.py
src/korean-teacher-agent/src/: main.py
src/korean-teacher-agent/src/agents/: homework_feedback_agent.py  notion_agent.py  supervisor.py  title_agent.py  writing_homework_agent.py
src/korean-teacher-agent/src/clients/: __init__.py  notion_client.py
src/korean-teacher-agent/src/database/: db_setup.py  homework.py  personal_korean_editing.py
src/korean-teacher-agent/src/prompts/: __init__.py  notion_agent_prompts.py  prompt_manager.py  supervisor_prompts.py  title_agent_prompts.py
src/korean-teacher-agent/src/services/: heartbeat_service.py  writing_homework.py
src/korean-teacher-agent/src/tools/: __init__.py  notion_tools.py  review_tools.py  title_tools.py
src/subtitle_generator/: .gitignore  Dockerfile  app.py  generate_subtitle.py  pyproject.toml
src/subtitle_generator/src/: generate_subtitle.py  subtitle_utils.py  translate_subtitle.py  vad_onnx.py
youtube/: Makefile  app.py  requirements.txt
