[project]
name = "korean-sns-post"
version = "0.1.0"
description = "한국어 snspost를 기획해주는 프로젝트"
authors = [
    {name = "roundtable"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
