[project]
name = "korean-teacher-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "RRoundTable",email = "ryu071511@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain-openai (>=0.3.14,<0.4.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "langgraph (>=0.3.34,<0.4.0)",
    "typing-extensions (>=4.13.2,<5.0.0)",
    "graphviz (>=0.20.3,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
