[project]
name = "subtitle-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "roundtable"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-whisper (>=20240930,<20240931)",
    "pydub (>=0.25.1,<0.26.0)",
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
