[tool.poetry]
name = "subtitle-generator"
version = "0.1.0"
description = "Application to generate and translate subtitles"
authors = ["Your Name <your.email@example.com>"] # 이 부분은 원하시면 수정하세요
license = "MIT" # 선택 사항

[tool.poetry.dependencies]
python = "^3.12,<4.0"
python-dotenv = "^1.0.0"
gradio = "^5.29.1"
openai = "^1.12.0"
srt = "^3.5.3"
pydub = "^0.25.1"
numpy = "*"

[tool.poetry.group.dev.dependencies] # 선택 사항: 개발 도구용
# pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
